Got test2 working again.

--- a/examples/scratch-drag.html
+++ b/examples/scratch-drag.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="jsworld.js"></script>
+    <script type="text/javascript" src="../jsworld.js"></script>
     
     <script type="text/javascript">
       var init_world = {
