Updated to use on_draw.  Got re-entrancy working.

--- a/examples/scratch.html
+++ b/examples/scratch.html
@@ -104,7 +104,8 @@
     </script>
   </head>
   
-  <body onload="jsworld.big_bang(window.document.body, init_world, redraw, redraw_css,
-                                 [jsworld.on_tick(100, tick)])">
+  <body onload="jsworld.big_bang(window.document.body, init_world,
+                                 [jsworld.on_draw(redraw, redraw_css),
+                                  jsworld.on_tick(100, tick)])">
   </body>
 </html>
