--- a/examples/scratch-drag.html
+++ b/examples/scratch-drag.html
@@ -163,10 +163,12 @@
     </script>
   </head>
   
-  <body onload="jsworld.big_bang(window.document.body, init_world, redraw, redraw_css,
-		[jsworld.on_tick(100, tick)],
-    { mousemove: continue_drag,
-      mouseup: complete_drag,
-      keypress: cancel_drag })">
+  <body onload="jsworld.big_bang(window.document.body, 
+                                 init_world,
+                      		 [jsworld.on_draw(redraw, redraw_css),
+                                  jsworld.on_tick(100, tick)],
+                                 { mousemove: continue_drag,
+                                   mouseup: complete_drag,
+                                   keypress: cancel_drag })">
   </body>
 </html>
