--- a/examples/test2.html
+++ b/examples/test2.html
@@ -69,7 +69,9 @@
     </script>
   </head>
   
-  <body onload="jsworld.big_bang(window.document.body, init_world, redraw, redraw_css, 
-		                [jsworld.on_tick(100, tick)])">
+  <body onload="jsworld.big_bang(window.document.body, 
+                                 init_world, 
+		                 [jsworld.on_draw(redraw, redraw_css),
+                                  jsworld.on_tick(100, tick)])">
   </body>
 </html>
